--- a/portfolio-website-V1/css/style.css
+++ b/portfolio-website-V1/css/style.css
@@ -80,6 +80,14 @@ p, h5, button, a{
 .gloria{
   font-family: 'gloria', cursive;
 }
+.ubuntu{
+  font-family: 'ubuntu', sans-serif;
+  font-weight: 500;
+}
+.source-sans{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+}
 
 .myBtnBlue{
   padding:5px 10px;
@@ -129,6 +137,34 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
   .myBtnBlue, .myBtnRed{
     font-size: 14px;
   }
-  
+  .ubuntu{
+    font-weight: 400 !important;
+  }
+  #contact p{
+    font-size: 0.9rem;
+  } 
 }
 
+p{
+  font-size: 1.1rem;
+  color: dimgray;
+}
+.jumbotron{
+  margin-bottom: 20px;
+}
+.icons{
+  display: flex;
+  justify-content: center;
+}
+.icons a{
+  padding: 15px;
+  background-color: #2d2d2d;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+.icons a i{
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  color: #fff;
+}
