--- a/portfolio-website-V1/css/style.css
+++ b/portfolio-website-V1/css/style.css
@@ -137,8 +137,11 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
   .myBtnBlue, .myBtnRed{
     font-size: 14px;
   }
-  .ubuntu{
+  /* .ubuntu{
     font-weight: 400 !important;
+  } */
+  #about p{
+    font-size: 1rem;
   }
   #contact p{
     font-size: 0.9rem;
