--- a/portfolio-website-V1/css/style.css
+++ b/portfolio-website-V1/css/style.css
@@ -146,6 +146,9 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
   #contact p{
     font-size: 0.9rem;
   } 
+  .jumbotron {
+    padding: 1rem 1rem;
+  }
 }
 
 p{
@@ -174,4 +177,9 @@ p{
 }
 .icons a i:hover{
   color: rgb(29, 133, 236);
+}
+@media (min-width: 576px){
+.jumbotron {
+    padding: 2rem 2rem;
+}
 }
