--- a/css/style.css
+++ b/css/style.css
@@ -140,9 +140,9 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
   /* .ubuntu{
     font-weight: 400 !important;
   } */
-  #about p{
+  /* #about p{
     font-size: 1rem;
-  }
+  } */
   #contact p{
     font-size: 0.9rem;
   } 
