--- a/habitapp/css/mobile.css
+++ b/habitapp/css/mobile.css
@@ -1,25 +1,24 @@
 html {
-    font-size: 16px;
+  font-size: 16px;
 }
-.container {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+
+#habitInput {
+  padding: 10px;
 }
-#habitInput{
-    padding: 10px;
+input {
+  font-size: 12px;
 }
-input{
-    font-size: 13px;
-  }
 h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
-table tbody tr td{
-    font-size: 1.2rem;
+table tbody tr td {
+  font-size: 1.2rem;
 }
-.paper-btn, [type=button], button {
-    padding: 0.5rem;
+.paper-btn,
+[type="button"],
+button {
+  padding: 0.5rem;
 }
-#days{
-    font-size: 1.5rem;
+#days {
+  font-size: 1.5rem;
 }
